<resources>
    <string name="app_name">Library App</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="title_activity_student_homepage">StudentHomepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_bookstaken">Books Taken</string>
    <string name="menu_newarrivals">New Arrivals</string>
    <string name="menu_previousyearqp">Previous Year Question Paper</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search your book</string>
    <string name="logout">Logout</string>
    <string name="send_email_for_due">Send Email for Due</string>
    <string name="send_email">Send Email</string>

    <array name="years">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </array>
</resources>